...
                borderRadius: BorderRadius.circular(8.0),
              ),
              padding:
                  const EdgeInsets.symmetric(vertical: 16.0, horizontal: 20.0),
            ),
            label: const Text(
              "Update item",
              style: TextStyle(color: Colors.white, fontSize: 18),
            ),
            icon: const Icon(Icons.update, color: Colors.white),
            onPressed: () async {
              await updateItem(item!.itemId);
              if (!mounted) return;
...
